--- a/ctmr.html
+++ b/ctmr.html
@@ -6,11 +6,21 @@
 	<style>
 		body {
 			background-color: Goldenrod;
-			font-size: calc(1.45em + 1.45vw);
+			font-size: calc(1.42em + 1.42vw);
 		}
   p.small{
     line-height: 0.8;
   }
+		
+
+.barra {
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: black;
+}		
+		
 		label {
 			display: inline-block;
 			text-align: center;
@@ -33,14 +43,17 @@
 </head>
 
 <body>
-<p style="text-align:center">
- <label style="font-weight:bold; color: black; font-size: calc(1em + 1vw);">[ Mega Reino - CÁLCULO DE TRIBUTOS ]</label><br>
+	
+<img style="align:left; width:20%; height:20%;" src="Logo_mega_reino-6.png"/>
+<p style="text-align:center">	
+   <label style="font-weight:bold; color: black; font-size: calc(1em + 1vw);">CÁLCULO DE TRIBUTOS</label><br><br>
 <p>
- <label style="font-weight:bold; color: black;" for="remuneracao">INFORME SUA REMUNERAÇÃO..:</label>
+	
+<label style="font-weight:bold; color: black;" for="remuneracao">INFORME SUA REMUNERAÇÃO.:</label>
 	<input style="width:34%;" type="text" value="" id="remuneracao"><br>
 
 <p class="small">
-	<label style="font-weight:bold;" for="primicias">PRIMÍCIAS (1/30).................................:</label>
+	<label style="font-weight:bold;" for="primicias">PRIMÍCIAS (1/30)................................:</label>
 	<input type="text" id="primicias" readonly><br>
  <label style="font-weight:bold;color: black; font-size: calc(0.6em + 0.6vw);">Gn 4:1-7 / Lv 2: 12 / Ez 44:30 / Ne 10:37</label><br>
  <label style="font-weight:bold;color: black; font-size: calc(0.6em + 0.6vw);">Ne 12:44 / Dt 18:1-4 / Dt 26:1-4 / 2Cr 31: 4-11</label><br>
@@ -48,41 +61,41 @@
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="dizimo">DÍZIMO (10%)......................................:</label>
+	<label style="font-weight:bold;" for="dizimo">DÍZIMO (10%).....................................:</label>
 	<input type="text" id="dizimo" readonly><br>
  <label style="font-weight:bold;color: black;  font-size: calc(0.6em + 0.6vw);">Gn 14:18-20 / Lv 27:32 / Dt 26:12-15 / Ne 10:37</label><br>
  <label style="font-weight:bold;color: black; font-size: calc(0.6em + 0.6vw);">2Cr 31:4-12 / Ml 3:6-10 / Mt 23:23-24 / Hb 7:1-10</label><br>
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="ofminsoc">OFERTA MINIST. DE SOCORRO (2%)..:</label>
+	<label style="font-weight:bold;" for="ofminsoc">OFERTA MINIST. DE SOCORRO (2%):</label>
 	<input type="text" id="ofminsoc" readonly><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Gn 22: 1-19 / Ex 23:14-17 / IRe 17:8-24</label><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">2Re 8:1-7 / Lc 8:1-3 / Mt 21:33-46 / Fp 4:10-19</label><br>
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="ofgrat">OFERTA GRATIDÃO (Mínimo 0,10%).:</label>
+	<label style="font-weight:bold;" for="ofgrat">OFERTA GRATIDÃO (Mínimo 0,10%):</label>
 	<input type="text" id="ofgrat" readonly><lbr>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Ml 1:6-10 / Ex 25:2-3 / Ex 34:20</label><br>
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="ofsem">SEMEADURA (Mínimo 0,40%)............:</label>
+	<label style="font-weight:bold;" for="ofsem">SEMEADURA (Mínimo 0,40%)...........:</label>
 	<input type="text" id="ofsem" readonly><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Gn 26:12-13 / Gl 6:8 / Tg 1:7-8 / IRe 17:8-16</label><br>
  <label style="font-weight:bold;color: black; font-size: calc(0.6em + 0.6vw);">Mc 4: 26-29 / 2Co 9:6-10</label><br>
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="ofisr">OFERTA PARA ISRAEL (1%)................:</label>
+	<label style="font-weight:bold;" for="ofisr">OFERTA PARA ISRAEL (1%)...............:</label>
 	<input type="text" id="ofisr" readonly><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Sl 122:6 / Jo 4:22-23 / Hb 11:8-10 / Sl 102:13-22</label><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Is 60:10-11 / Zc 14:16-20 / Rm 15:27</label><br>
 </p>
 
 <p class="small">
-	<label style="font-weight:bold;" for="ofmis">OFERTA DE MISSÕES (2%)..................:</label>
+	<label style="font-weight:bold;" for="ofmis">OFERTA DE MISSÕES (2%).................:</label>
 	<input type="text" id="ofmis" readonly><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">Sl 2:7-8 / Sl 96:3 / Is 6:8 / Mt 28:19-20 /Mc 16:15</label><br>
  <label style="font-weight:bold;color: black;font-size: calc(0.6em + 0.6vw);">At :1:8 / II Co 8:1-4 / Fl 4:10-16 / Hb 13:16</label><br>
@@ -99,14 +112,14 @@
 <input style="background-color:white; color:black; width: 38%; font-size: calc(0.9em + 0.9vw);" type="text" id="totaloferta" readonly><br><br>
 </p>
 <p style="text-align:center;">
- <label style="font-weight:bold;font-size: calc(0.7em + 0.7vw);">"Ninguém apareça diante de mim de mãos vazias"</label><br>
- <label style="font-weight:bold;font-size: calc(0.65em + 0.65vw);">Êxodo 34:20-b</label><br><br>
- <label style="font-weight:bold;font-size: calc(0.8em + 0.8vw);">PIX: megareino777@gmail.com</label><br>
+ <label style="font-weight:bold;font-size: calc(0.75em + 0.75vw);">"Ninguém apareça diante de mim de mãos vazias"</label><br>
+ <label style="font-weight:bold;font-size: calc(0.7em + 0.7vw);">Êxodo 34:20-b</label><br><br>
+ <label style="font-weight:bold;font-size: calc(1em + 1vw);">PIX: megareino777@gmail.com</label><br>
 </p>
 
 
-	<script>
-		function calcular() {
+<script>
+function calcular() {
    var remuneracao = 0.00;
    var novaoferta = 0.00;
 
@@ -119,6 +132,13 @@
    }
    else{
       document.getElementById("remuneracao").value = "";
+      document.getElementById("primicias").value = "";
+      document.getElementById("dizimo").value = "";
+      document.getElementById("ofminsoc").value = "";
+      document.getElementById("ofgrat").value = "";
+      document.getElementById("ofsem").value = "";
+      document.getElementById("ofisr").value = "";
+      document.getElementById("ofmis").value = "";
       remuneracao = 0;
       //return;
    }
@@ -129,7 +149,6 @@
        novaoferta = parseFloat(aux2)/100.00;
        document.getElementById("novaoferta").value = "";
        document.getElementById("novaoferta").value = novaoferta.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-
    }
    else{
       document.getElementById("novaoferta").value = "";
@@ -138,11 +157,22 @@
    }
    
    if((remuneracao == 0) && (novaoferta == 0)){
+      document.getElementById("remuneracao").value = "";
+      document.getElementById("novaoferta").value = "";
+      document.getElementById("totaloferta").value = "";
+
+      document.getElementById("primicias").value = "";
+      document.getElementById("dizimo").value = "";
+      document.getElementById("ofminsoc").value = "";
+      document.getElementById("ofgrat").value = "";
+      document.getElementById("ofsem").value = "";
+      document.getElementById("ofisr").value = "";
+      document.getElementById("ofmis").value = "";
       return;
    }
-
+   
    var primicias = parseFloat((remuneracao/30).toFixed(2));
-		 	var dizimo = parseFloat(((remuneracao - primicias) * 0.1).toFixed(2));
+   var dizimo = parseFloat(((remuneracao - primicias) * 0.1).toFixed(2));
    if(dizimo <= 0){ dizimo = primicias; }
    var ofminsoc = parseFloat((remuneracao * 0.02).toFixed(2));
    var ofgrat = parseFloat((remuneracao * 0.001).toFixed(2));
@@ -150,19 +180,22 @@
    var ofisr = parseFloat((remuneracao * 0.01).toFixed(2));
    var ofmis = parseFloat((remuneracao * 0.02).toFixed(2));
   
-   document.getElementById("primicias").value = primicias.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("dizimo").value = dizimo.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("ofminsoc").value = ofminsoc.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("ofgrat").value = ofgrat.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("ofsem").value = ofsem.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("ofisr").value = ofisr.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-   document.getElementById("ofmis").value = ofmis.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+   if(remuneracao > 0){
+      document.getElementById("primicias").value = primicias.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("dizimo").value = dizimo.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("ofminsoc").value = ofminsoc.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("ofgrat").value = ofgrat.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("ofsem").value = ofsem.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("ofisr").value = ofisr.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+     cdocument.getElementById("ofmis").value = ofmis.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+   }
+
    var sum=primicias+dizimo+ofminsoc+ofgrat+ofsem+ofisr+ofmis+novaoferta;
    document.getElementById("totaloferta").value = sum.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-		}
+}
 
-		document.getElementById("remuneracao").addEventListener("input", calcular);
+  document.getElementById("remuneracao").addEventListener("input", calcular);
   document.getElementById("novaoferta").addEventListener("input", calcular);
-	</script>
+A a aa1a</script>
 </body>
 </html>
