--- a/ctmr.html
+++ b/ctmr.html
@@ -44,7 +44,7 @@
 
 <body>
 	
-<img style="align:left; width:20%; height:20%;" src="Logo_mega_reino-6.png"/>
+<img style="align:left; width:20%; height:20%;" src="Logo_mega_reino-6-1.png"/>
 <p style="text-align:center">	
    <label style="font-weight:bold; color: black; font-size: calc(1em + 1vw);">CÁLCULO DE TRIBUTOS</label><br><br>
 <p>
