--- a/ctmr.html
+++ b/ctmr.html
@@ -196,6 +196,6 @@ function calcular() {
 
   document.getElementById("remuneracao").addEventListener("input", calcular);
   document.getElementById("novaoferta").addEventListener("input", calcular);
-A a aa1a</script>
+</script>
 </body>
 </html>
