--- a/ctmr.html
+++ b/ctmr.html
@@ -187,7 +187,7 @@ function calcular() {
       document.getElementById("ofgrat").value = ofgrat.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
       document.getElementById("ofsem").value = ofsem.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
       document.getElementById("ofisr").value = ofisr.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
-     cdocument.getElementById("ofmis").value = ofmis.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
+      document.getElementById("ofmis").value = ofmis.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'});
    }
 
    var sum=primicias+dizimo+ofminsoc+ofgrat+ofsem+ofisr+ofmis+novaoferta;
