--- a/ctmr.html
+++ b/ctmr.html
@@ -173,13 +173,13 @@ function calcular() {
    
    var primicias = Math.ceil(parseFloat((remuneracao/30).toFixed(2)));
    var dizimo = Math.ceil(parseFloat(((remuneracao - primicias) * 0.1).toFixed(2)));
-   if(dizimo <= 0){ dizimo = primicias; }
+   if(dizimo < 1){ dizimo = primicias; }
    var ofminsoc = Math.ceil(parseFloat(((remuneracao-primicias-dizimo)* 0.02).toFixed(2)));
-   if(ofminsoc < 0.00) ofminsoc=1.00;
+   if(ofminsoc < 1) ofminsoc=1;
    var ofgrat = Math.ceil(parseFloat(((remuneracao-primicias-dizimo-ofminsoc) * 0.001).toFixed(2)));
    if(ofgrat < 2.00) ofgrat=2.00;
    var ofsem = Math.ceil(parseFloat(((remuneracao-primicias-dizimo-ofminsoc-ofgrat) * 0.004).toFixed(2)));
-   if(ofsem < 0.00) ofsem=1.00;
+   if(ofsem < 1) ofsem=1;
    var ofisr = Math.ceil(parseFloat((remuneracao * 0.01).toFixed(2)));
    var ofmis = Math.ceil(parseFloat((remuneracao * 0.02).toFixed(2)));
   
