--- a/ctmrprop.html
+++ b/ctmrprop.html
@@ -46,7 +46,7 @@
 	
 <img style="align:left; width:20%; height:20%;" src="Logo_mega_reino-6-1.png"/>
 <p style="text-align:center">	
-   <label style="font-weight:bold; color: black; font-size: calc(1em + 1vw);">CÁLCULO DE TRIBUTOS</label><br><br>
+   <label style="font-weight:bold; color: black; font-size: calc(1em + 1vw);">CÁLCULO DE TRIBUTOS SIMPLES</label><br><br>
 <p>
 	
 <label style="font-weight:bold; color: black;" for="remuneracao">INFORME SUA REMUNERAÇÃO.:</label>
