--- a/ctmr24.html
+++ b/ctmr24.html
@@ -127,9 +127,9 @@ function calcular() {
    var inpx=document.getElementById("remuneracao").value;
    var aux1=inpx.replace(/[^0-9]/g,'');
    if(parseFloat(aux1) > 0){
-       remuneracao = parseFloat(aux1)/100.00;
+       remuneracao = parseFloat(aux1);
        document.getElementById("remuneracao").value = "";
-       document.getElementById("remuneracao").value = remuneracao.toLocaleString('pt-br', {minimumFractionDigits: 1})
+       document.getElementById("remuneracao").value = remuneracao.toLocaleString('pt-br', {minimumFractionDigits: 0})
    }
    else{
       document.getElementById("remuneracao").value = "";
